<resources>
    <string name="app_name">groupprojectgroup20</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="game_view_content_description" translatable="false">Game view</string>
    <string name="random_image">Random Image</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_history">History</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="our_app_name">Fitness and Fight App</string>
    <string name="cs5520GroupName">CS5520_group_20</string>

    //permission_rationale_title
    <string name="permission_rationale_title">Permissions Rationale</string>
    <string name="permission_rationale_message">To provide you with personalized fitness tracking and health recommendations,
        our app requires access to your activity data, heart rate, and other health metrics. We ensure your data is encrypted, stored securely, and not shared with third parties. Your privacy and trust are paramount to us.
    </string>
    <string name="title_activity_permissions_rationale">Permission Rationale</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Select your date of birth (dd/mm/yyyy)*</string>
    <string name="submit">submit</string>
    <string name="enter_your_register_email">Enter your register email</string>
    <string name="title_activity_role_data_cal">RoleDataCal</string>

</resources>