<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.Login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:contentDescription="@android:string/autofill"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        android:id="@+id/loginHeaderImage"
        android:src="@drawable/login_header_image"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/login_header_image_layer"
        app:layout_constraintBottom_toBottomOf="@+id/loginHeaderImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/loginHeaderImage"
        android:layout_marginStart="19dp"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/our_app_name"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            android:text="@string/cs5520GroupName"
            android:textSize="21sp"
            />
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:id="@+id/view_Support"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/loginHeaderImage"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/login_background"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_Support"
        tools:layout_editor_absoluteX="1dp">

        <View
            android:id="@+id/view_divider_for_password"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorTextHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginInputPassword" />

        <TextView
            android:id="@+id/textWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/colorTextPrimary"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/loginInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:hint="@string/prompt_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingStart="60dp"
            android:paddingEnd="10dp"
            android:textColor="@color/common_google_signin_btn_text_dark"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/textWelcome"
            tools:ignore="Autofill"
            tools:layout_editor_absoluteX="40dp" />

        <View
            android:id="@+id/view_divider_for_email"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="1dp"
            android:background="@color/colorTextHint"
            app:layout_constraintTop_toBottomOf="@+id/loginInputEmail"
            tools:layout_editor_absoluteX="30dp" />

        <ImageView
            android:id="@+id/email_image"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/baseline_email"
            app:layout_constraintBottom_toBottomOf="@+id/loginInputEmail"
            app:layout_constraintStart_toStartOf="@id/loginInputEmail"
            app:tint="@color/colorTextHint" />

        <EditText
            android:id="@+id/loginInputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:hint="@string/prompt_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="60dp"
            android:paddingEnd="10dp"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/loginInputEmail"
            tools:ignore="Autofill" />

        <!--        <View-->
        <!--            android:id="@+id/view_divider_for_password"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="1dp"-->
        <!--            android:layout_marginStart="10dp"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:layout_marginEnd="10dp"-->
        <!--            android:background="@color/colorTextHint"-->
        <!--           -->
        <!--         />-->

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/baseline_password"
            app:layout_constraintBottom_toBottomOf="@+id/loginInputPassword"
            app:layout_constraintStart_toStartOf="@id/loginInputPassword"
            app:tint="@color/colorTextHint" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/primary_submit_button"
            android:text="Login"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/view_divider_for_password"
            tools:layout_editor_absoluteX="40dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_forget_password"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="Forget Password?"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@+id/button_login"
            />

        <Button
            android:id="@+id/button_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/secondary_button_background"
            android:text="Create Account"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_forget_password"
            tools:layout_editor_absoluteX="40dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>